# stactools

./: .codespellignore  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.environment.yml  .readthedocs.yml  CHANGELOG.md  CODEOWNERS  MANIFEST.in  README.md  RELEASING.md  doc8.ini  environment.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-min.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/setup/: action.yml
.github/workflows/: PULL_REQUEST_TEMPLATE.MD  continuous-integration.yml  release.yml
docker/: Dockerfile  Dockerfile-dev  build  cibuild  console  debug  docs-server  env  format  notebook  pull  stac  test
docs/: Makefile  Untitled.ipynb  api.rst  builder.rst  cli.rst  conf.py  footprint.rst  index.rst  tutorials.rst
docs/tutorials/: working-with-planet-data-in-python.ipynb  working-with-planet-data-in-the-cli.rst
scripts/: check_minimum_requirements  cibuild  env  format  install  install-min-requirements  lint  notebook  publish  rewrite_test_data.py  stac  stactools  test  update
src/stactools/cli/: __init__.py  cli.py  registry.py
src/stactools/core/: __init__.py  add.py  add_asset.py  add_raster.py  addraster.py  builder.py  copy.py  create.py  geometry.py  layout.py  merge.py  migrate.py  projection.py
src/stactools/testing/: __init__.py  cli.py  cli_test.py  test_data.py
stactools/: __init__.py  __main__.py  aster  browse  cgls_lc100  cli  cli.py  core  corine  glc_layers  goes  landsat  modis  naip  planet  pointcloud  sentinel  sentinel1  sentinel2  spot  threedep
stactools/browse/: Dockerfile-node  Dockerfile-titiler  __init__.py  docker-compose.yml.template
stactools/cli/: __init__.py  cli.py  registry.py
stactools/cli/commands/: info.py
stactools/commands/: copy.py  migrate.py
stactools/core/: layout.py
stactools/core/io/: __init__.py  xml.py
stactools/core/utils/: __init__.py
stactools_aster/: README.md  requirements.txt  setup.py
stactools_aster/stactools/aster/: __init__.py  cog.py  commands.py  constants.py  stac.py  utils.py  version.py  xml_metadata.py
stactools_browse/: MANIFEST.in  README.md  requirements.txt  setup.py
stactools_browse/stactools/browse/: Dockerfile-titiler  commands.py
stactools_cgls_lc100/: README.md  setup.py
stactools_cgls_lc100/stactools/cgls_lc100/: __init__.py  cog.py  commands.py  constants.py  stac.py
stactools_cli/: README.md  setup.py
stactools_cli/stactools/cli/: __init__.py  __main__.py  cli.py
stactools_core/: README.md  requirements.txt  setup.py
stactools_core/stactools/core/: __init__.py  copy.py  io.py  merge.py  projection.py
stactools_corine/: README.md  setup.py
stactools_corine/stactools/corine/: __init__.py  cog.py  commands.py  constants.py  stac.py
stactools_goes/: README.md  requirements.txt  setup.py
stactools_goes/stactools/goes/: __init__.py  commands.py  dataset.py  stac.py
stactools_landsat/: README.md  setup.py
stactools_landsat/stactools/landsat/: __init__.py  ang_metadata.py  assets.py  commands.py  constants.py  mtl_metadata.py  stac.py  utils.py  version.py
stactools_modis/: README.md  requirements.txt  setup.py
stactools_modis/stactools/modis/: __init__.py  cog.py  commands.py  constants.py  stac.py
stactools_naip/: README.md  requirements.txt  setup.py
stactools_naip/stactools/naip/: __init__.py  commands.py  constants.py  stac.py  utils.py  version.py
stactools_planet/: README.md  requirements.txt  setup.py
stactools_planet/stactools/planet/: __init__.py  commands.py  constants.py  orders.py  planet_item.py  version.py
stactools_pointcloud/: README.md  requirements.txt  setup.py
stactools_pointcloud/stactools/pointcloud/: __init__.py  commands.py  stac.py
stactools_sentinel/: README.md  setup.py
stactools_sentinel/stactools/sentinel/: __init__.py  cog.py  commands.py  constants.py  extended_item_metadata.py  granule_metadata.py  product_metadata.py  safe_manifest.py  stac.py  utils.py  version.py
stactools_sentinel1/: README.md  requirements.txt  setup.py
stactools_sentinel1/stactools/sentinel1/: __init__.py  commands.py  constants.py  rtc_metadata.py  sentinel1-rtc-conus-grid.geojson  stac.py
stactools_sentinel2/: README.md  requirements.txt  setup.py
stactools_sentinel2/stactools/sentinel2/: __init__.py  cog.py  commands.py  constants.py  granule_metadata.py  product_metadata.py  safe_manifest.py  stac.py  utils.py
stactools_spot/: README.md  requirements.txt  setup.py
stactools_spot/stactools/spot/: __init__.py  commands.py  geobase_ftp.py  stac.py  stac_templates.py  utils.py
stactools_threedep/: README.md  requirements.txt  setup.py
stactools_threedep/stactools/threedep/: __init__.py  commands.py  constants.py  metadata.py  stac.py  utils.py  version.py
tests/: __init__.py  conftest.py  test_io.py  utils.py
tests/aster/: test_commands.py  test_xml_metadata.py
tests/cgls_lc100/: test_commands.py
tests/cli/commands/: cli_test_utils.py  test_add.py  test_add_asset.py  test_add_raster.py  test_addraster.py  test_cases.py  (+11 more)
tests/commands/: test_copy.py
tests/core/: test_add_asset.py  test_add_raster.py  test_builder.py  test_create.py  test_io.py  test_projection.py  test_utils.py
tests/corine/: test_commands.py
tests/goes/: test_commands.py  test_dataset.py  test_stac.py  test_urls.sh  urls.txt
tests/landsat/: data.py  test_ang_metadata.py  test_commands.py  test_create_stac.py  test_mtl_metadata.py
tests/modis/: test_commands.py
tests/naip/: test_commands.py  test_stac.py  test_utils.py
tests/planet/: test_commands.py
tests/pointcloud/: test_commands.py  test_stac.py
tests/sentinel1/: test_commands.py
tests/sentinel2/: test_commands.py  test_metadata.py
tests/spot/: test_commands.py  test_utils.py
tests/testing/: __init__.py  test_test_data.py
tests/threedep/: test_commands.py  test_metadata.py  test_stac.py  test_utils.py
tests/utils/: __init__.py  cli.py  cli_test.py  test_cases.py  test_data.py  validate_cloud_optimized_geotiff.py
(+610 files in other folders)
