[project]
name = "stactools"
description = "Command line tool and Python library for working with STAC"
readme = "README.md"
authors = [
    { name = "Rob Emanuele", email = "rdemanuele@gmail.com" },
    { name = "Pete Gadomski", email =  "pete.gadomski@gmail.com" },
]
maintainers = [{ name = "Pete Gadomski", email =  "pete.gadomski@gmail.com" }]
license = { text = "Apache-2.0" }
keywords = [
    "pystac",
    "imagery",
    "raster",
    "catalog",
    "STAC",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "Shapely>=1.8.5.post1",
    "aiohttp>=3.8.3",
    "antimeridian>=0.2.6",
    "click>=8.1.3",
    "fsspec>=2021.7",
    "lxml>=4.9.2",
    "numpy>=1.22.0",
    "pyproj>=3.3",
    "pystac[validation]>=1.6.1",
    "rasterio>=1.3.2",
    "requests>=2.27.1",
    "stac-check>=1.3.2",
    "stac-validator>=3.1.0",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/stac-utils/stactools"
documentation = "https://stactools.readthedocs.io/"
repository = "https://github.com/stac-utils/stactools.git"
changelog = "https://github.com/stac-utils/stactools/blob/main/CHANGELOG.md"
discussions = "https://github.com/radiantearth/stac-spec/discussions/categories/stac-software"

[project.scripts]
stac = "stactools.cli.cli:run_cli"

[project.optional-dependencies]
dev = [
    "black~=23.3",
    "codespell~=2.2",
    "importlib-metadata~=6.6",
    "ipython~=8.12",
    "jupyter~=1.0",
    "lxml-stubs~=0.4",
    "mypy~=1.3",
    "nbsphinx~=0.9",
    "packaging~=23.1",
    "pre-commit~=3.3",
    "pydata-sphinx-theme~=0.13",
    "pylint~=2.17",
    "pytest~=7.3",
    "pytest-cov~=3.0",
    "ruff==0.0.265",
    "sphinx~=7.0",
    "sphinx-autobuild==2021.3.14",
    "sphinx-click~=4.4",
    "sphinxcontrib-napoleon~=0.7",
    "types-certifi~=2021.10.8",
    "types-orjson~=3.6",
    "types-python-dateutil~=2.8",
    "types-requests~=2.30",
]
s3 = ["s3fs>=2021.7"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "stactools.core.__version__" }

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
show_error_codes = true
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "fsspec",
    "osgeo",
    "rasterio",
    "s3fs",
    "shapely"
]
ignore_missing_imports = true
